holyc-parser/tests/corpus/passing/090-stmt-stmt-for.hc
U0 SE_for() { I64 i; for (i=0; i<3; i++) ; }
