holyc-parser/tests/corpus/failing/003-bug-compat-bug54-for-decl-filescope.hc
for (I64 i_b54 = 0; i_b54 < 3; i_b54++) ;
